syntax = "proto3";

option go_package = "github.com/zeropsio/zcli/src/protocol/daemon";

package zeropsDaemonProtocol;

service ZeropsDaemonProtocol {
    rpc startVpn (startVpnRequest) returns (vpnStatus);
    rpc stopVpn (stopVpnRequest) returns (vpnStatus);
    rpc statusVpn (statusVpnRequest) returns (vpnStatus);
}

enum tunnelState {
    TUNNEL_SET_INACTIVE = 0;
    TUNNEL_ACTIVE = 1;
}

enum dnsState {
    DNS_SET_INACTIVE = 0;
    DNS_ACTIVE = 1;
}

message vpnStatus {
    tunnelState tunnelState = 1;
    dnsState dnsState = 2;
    string additionalInfo = 3;
}

message startVpnRequest {
    string apiAddress = 1;
    string vpnAddress = 2;
    string projectId = 3;
    string token = 4;
    uint32 mtu = 5;
    string userId = 6;
    string caCertificateUrl = 7;
    uint32 preferredPortMin = 8;
    uint32 preferredPortMax = 9;
}

message stopVpnRequest {
}

message statusVpnRequest {
}
